@startuml

package priorityMng{
    class Coda <T>{
        -nome : String
    }
    class PriorityMng{
        - code : coda[]
        +stampaCoda(livello : int) : String
        +addPaziente(p : Paziente) : void
    }

    class Paziente{
        -nome : String
        -cognome : String
        -priorityLvl : int
        -priorityColor : String
        -setPriorityColor() : void
    }

}

package StructureQueue{

    class structureQueue <T>{
        - coda : ArrayList<T>
        +pop() : T
        +push(e : T) : void
        +top() : T
        +isEmpty() : boolean
        +size() : int
    }

}

package main{
    class Main
    }
Coda --|> structureQueue
PriorityMng --o Coda
Coda -* Paziente
Coda --> Main

@enduml